--- a/example/mixin/alerts.yaml
+++ b/example/mixin/alerts.yaml
@@ -6,9 +6,8 @@ groups:
       description: Errors while performing List operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
       summary: Errors while performing list operations in controller.
-    expr: "(sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job=\"prometheus-operator\"}[10m]))
-      / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job=\"prometheus-operator\"}[10m])))
-      > 0.4\r\n"
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator"}[10m]))) > 0.4
     for: 15m
     labels:
       severity: warning
@@ -17,9 +16,8 @@ groups:
       description: Errors while performing watch operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
       summary: Errors while performing watch operations in controller.
-    expr: "(sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job=\"prometheus-operator\"}[10m]))
-      / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job=\"prometheus-operator\"}[10m])))
-      > 0.4\r\n"
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator"}[10m]))) > 0.4
     for: 15m
     labels:
       severity: warning
@@ -28,8 +26,8 @@ groups:
       description: Controller {{ $labels.controller }} in {{ $labels.namespace }}
         namespace fails to reconcile {{ $value }} objects.
       summary: Last controller reconciliation failed
-    expr: "min_over_time(prometheus_operator_syncs{status=\"failed\",job=\"prometheus-operator\"}[5m])
-      > 0\r\n"
+    expr: |
+      min_over_time(prometheus_operator_syncs{status="failed",job="prometheus-operator"}[5m]) > 0
     for: 10m
     labels:
       severity: warning
@@ -38,9 +36,8 @@ groups:
       description: '{{ $value | humanizePercentage }} of reconciling operations failed
         for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
       summary: Errors while reconciling controller.
-    expr: "(sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job=\"prometheus-operator\"}[5m])))
-      / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job=\"prometheus-operator\"}[5m])))
-      > 0.1\r\n"
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m]))) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator"}[5m]))) > 0.1
     for: 10m
     labels:
       severity: warning
@@ -49,8 +46,8 @@ groups:
       description: Errors while reconciling Prometheus in {{ $labels.namespace }}
         Namespace.
       summary: Errors while reconciling Prometheus.
-    expr: "rate(prometheus_operator_node_address_lookup_errors_total{job=\"prometheus-operator\"}[5m])
-      > 0.1\r\n"
+    expr: |
+      rate(prometheus_operator_node_address_lookup_errors_total{job="prometheus-operator"}[5m]) > 0.1
     for: 10m
     labels:
       severity: warning
@@ -59,8 +56,8 @@ groups:
       description: Prometheus operator in {{ $labels.namespace }} namespace isn't
         ready to reconcile {{ $labels.controller }} resources.
       summary: Prometheus operator not ready
-    expr: "min by(namespace, controller) (max_over_time(prometheus_operator_ready{job=\"prometheus-operator\"}[5m])
-      == 0)\r\n"
+    expr: |
+      min by(namespace, controller) (max_over_time(prometheus_operator_ready{job="prometheus-operator"}[5m]) == 0)
     for: 5m
     labels:
       severity: warning
@@ -70,8 +67,8 @@ groups:
         {{ printf "%0.0f" $value }} {{ $labels.controller }}/{{ $labels.resource }}
         resources.
       summary: Resources rejected by Prometheus operator
-    expr: "min_over_time(prometheus_operator_managed_resources{state=\"rejected\",job=\"prometheus-operator\"}[5m])
-      > 0\r\n"
+    expr: |
+      min_over_time(prometheus_operator_managed_resources{state="rejected",job="prometheus-operator"}[5m]) > 0
     for: 5m
     labels:
       severity: warning
